Further styling on floating elements and fixing alignment issues.

--- a/app/assets/stylesheets/products.css
+++ b/app/assets/stylesheets/products.css
@@ -2,3 +2,56 @@
   Place all the styles related to the matching controller here.
   They will automatically be included in application.css.
 */
+.center_column {
+  width: 100vw;
+  /*display: inline;*/
+  /*background-color: #ffffff;*/
+  opacity: 1;
+  z-index: -1;
+  text-align: center;
+  min-width: 50px;
+}
+
+img {
+  border-width: thick;
+  border-color: red;
+}
+
+#decription {
+  width: 280;
+  height: 125;
+  font: red;
+}
+
+#show, #edit, #destroy {
+  text-align: center;
+}
+.column2 {
+  align-content: center;
+  text-align: center;
+}
+
+.column3 {
+  text-align: center;
+}
+
+/*.center_column:after {
+    content: '';
+    display: inline-block;
+    width: 100%;
+}*/
+
+#game_pic {
+  padding: 10px;
+  z-index: 1;
+  border-width: thick;
+  border-color: red;
+  /*background: black;*/
+}
+
+
+
+h3 {
+
+
+}
